data/all_generated_tests/raw_wast_tests/loop_StackCorruption_367.wast
;; 8. **Test Description:**    - Loop involving memory operations to check memory-located values.    - **Constraint Checked:** Efficient memory read/write during loop iterating.    - **Relation to Stack Corruption:** Corrupt loop operations due to incorrect memory management can break stack conditions.    ```wasm    (module      (memory 1)      (func (export "test")         (local i32 i32)        i32.const 0        local.set 0        loop          (i32.const 1)          (local.get 0)           i32.add          i32.const 0          i32.store          (local.get 0)          i32.const 4          i32.add          local.set 0          local.get 0          i32.const 40          i32.ne          br_if 0        end))    )    ```

(assert_invalid
  (module
    (memory 1)
    (func (export "test")
      (local i32 i32)
      i32.const 0
      local.set 0
      loop
        (i32.const 1)
        (local.get 0)
        i32.add
        i32.const 0
        i32.store
        (local.get 0)
        i32.const 4
        i32.add
        local.set 0
        local.get 0
        i32.const 40
        i32.ne
        br_if 0
      end)
  ))
  "type mismatch"
)